@@ -1,14 +1,15 @@
 package org.summer.core;
 
+import org.summer.core.annotation.Component;
 import org.summer.core.dependency.BeanDependencyGraph;
 import org.summer.core.dependency.DependencyGraph;
-import org.summer.core.dependency.PackageScanner;
 
 import java.io.IOException;
 import java.lang.reflect.Constructor;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class ApplicationContext {
 
@@ -22,20 +23,31 @@ public class ApplicationContext {
         this.beanDependencyGraph = new BeanDependencyGraph();
     }
 
-    public void initialize(String basePackage) throws IOException, ClassNotFoundException, ReflectiveOperationException {
-        List<Class<?>> beanClasses = scanForBeanClasses(basePackage);
-        buildDependencyGraph(beanClasses);
-        List<Class<?>> sortedBeans = beanDependencyGraph.sort();
+    public void initialize(String basePackage) throws IOException, ReflectiveOperationException {
+        Set<Class<?>> classes = scanForBeanClasses(basePackage);
+        buildDependencyGraph(classes);
+        List<Class<?>> sortedBeans = beanDependencyGraph.build();
         instantiateAndRegisterBeans(sortedBeans);
     }
 
-    private List<Class<?>> scanForBeanClasses(String basePackage) throws IOException, ClassNotFoundException {
-        return packageScanner.scanPackageForBeans(basePackage);
+    private Set<Class<?>> scanForBeanClasses(String basePackage) throws IOException, ClassNotFoundException {
+        Stream<Class<?>> classes = packageScanner.scanPackages(basePackage);
+        return filterComponentClasses(classes);
     }
 
-    private void buildDependencyGraph(List<Class<?>> beanClasses) {
-        for (Class<?> cls : beanClasses) {
-            beanDependencyGraph.addElement(cls);
+    private Set<Class<?>> filterComponentClasses(Stream<Class<?>> classes) {
+        return classes
+                .filter(this::isComponentClass)
+                .collect(Collectors.toSet());
+    }
+
+    private boolean isComponentClass(Class<?> clazz) {
+        return clazz.isAnnotationPresent(Component.class);
+    }
+
+    private void buildDependencyGraph(Set<Class<?>> beanClasses) {
+        for (Class<?> clazz : beanClasses) {
+            beanDependencyGraph.addElement(clazz, getClassDependencies(clazz));
         }
     }
 
@@ -47,14 +59,35 @@ public class ApplicationContext {
     }
 
     private Object instantiateBean(Class<?> clazz) throws ReflectiveOperationException {
-        Constructor<?> constructor = clazz.getConstructors()[0];
-        List<Object> dependencies = Arrays.stream(constructor.getParameterTypes())
+        Constructor<?> constructor = getConstructor(clazz);
+        List<Object> dependencies = getClassDependencies(clazz)
+                .stream()
                 .map(this::resolveDependency)
-                .collect(Collectors.toList());
+                .toList();
+
         return constructor.newInstance(dependencies.toArray());
+    }
+
+    private List<Class<?>> getClassDependencies(Class<?> clazz) {
+        Constructor<?> constructor = getConstructor(clazz);
+        return List.of(constructor.getParameterTypes());
+    }
+
+    private Constructor<?> getConstructor(Class<?> clazz) {
+        Constructor<?>[] constructors = clazz.getConstructors();
+        if (constructors.length == 0) {
+            throw new NoPublicConstructorException(clazz);
+        }
+        return constructors[0];
     }
 
     private Object resolveDependency(Class<?> dependencyClass) {
         return beanContainer.getBean(dependencyClass);
+    }
+
+    static class NoPublicConstructorException extends RuntimeException {
+        NoPublicConstructorException(Class<?> cls) {
+            super("No public constructor found for class: " + cls.getName());
+        }
     }
 }
